After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 741439 - Words completion provider: warning messages
Words completion provider: warning messages
Status: RESOLVED FIXED
Product: gtksourceview
Classification: Platform
Component: General
3.14.x
Other Linux
: Normal normal
: ---
Assigned To: GTK Sourceview maintainers
GTK Sourceview maintainers
Depends on:
Blocks:
 
 
Reported: 2014-12-12 12:08 UTC by Sébastien Wilmet
Modified: 2015-01-03 18:10 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Sébastien Wilmet 2014-12-12 12:08:02 UTC
It seems that there will always be warning or critical messages with this words completion provider…

Several times this one:
(gedit:3375): GtkSourceView-WARNING **: words completion scan_line(): 'text_end' iter not adjusted.

One time this one:
(gedit:3375): GtkSourceView-WARNING **: words completion scan_line(): 'start' iter not adjusted.
Comment 1 Ignacio Casal Quinteiro (nacho) 2014-12-12 12:09:27 UTC
Yeah I get those all the time
Comment 2 Sébastien Wilmet 2015-01-03 18:10:05 UTC
It should be fixed now:
https://git.gnome.org/browse/gtksourceview/commit/?id=11a2cb8c7b3c64c13be278c974d3f8c75dc8fd44