gtksourceview/completion-providers/words/gtksourcecompletionwordsutils.h
@@ -38,6 +38,10 @@ G_GNUC_INTERNAL
 void		 _gtk_source_completion_words_utils_adjust_region	(GtkTextIter *start,
 									 GtkTextIter *end);
 
+G_GNUC_INTERNAL
+void		 _gtk_source_completion_words_utils_check_scan_region	(const GtkTextIter *start,
+									 const GtkTextIter *end);
+
 G_END_DECLS
 
 #endif /* __GTK_SOURCE_COMPLETION_WORDS_UTILS_H__ */
